--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -7,6 +7,9 @@
     %link{rel: 'stylesheet', href: asset_path('vendor.css'), type: 'text/css'}
     %link{rel: 'stylesheet', href: asset_path('application.css'), type: 'text/css'}
   %body
+    .ribbon-wrapper
+      .ribbon.success
+        &nbsp;
     #content
       .container
         .row-fluid
